# needle-in-a-haystack

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/models/: anthropic-opus-4-medium.yaml  fake.yaml  openai-gpt-4o-mini.yaml  openai-gpt-4o.yaml
configs/runs/: multi_needle.example.yaml  single_needle.example.yaml  smoke.fake.yaml  uuid.example.yaml  uuid_chain.example.yaml
needlehaystack/: __init__.py
needlehaystack/cli/: __init__.py  demo.py  main.py  reconstruct.py
needlehaystack/config/: __init__.py  loader.py  schema.py
needlehaystack/core/: __init__.py  runner.py  sweep.py  tokens.py  types.py
needlehaystack/haystacks/: __init__.py  base.py  files.py  text.py
needlehaystack/inserters/: __init__.py  base.py  even_spread.py  explicit.py  single_depth.py
needlehaystack/needles/: __init__.py  base.py  static.py  uuid_chain.py  uuid_single.py
needlehaystack/providers/: __init__.py  anthropic.py  base.py  cohere.py  fake.py  openai.py  registry.py
needlehaystack/scorers/: __init__.py  base.py  chain_match.py  exact_match.py
needlehaystack/stores/: __init__.py  base.py  jsonl.py
needlehaystack/tasks/: __init__.py  base.py  multi_needle.py  single_needle.py  uuid_chain.py  uuid_needle.py
tests/configs/: fake.yaml  uuid_tiny.yaml
tests/integration/: test_cli_demo.py  test_cli_run.py  test_reconstruct.py  test_runner_end_to_end.py
tests/unit/: test_config_loader.py  test_fake_provider.py  test_haystack_files.py  test_haystack_text.py  test_inserter_even_spread.py  test_inserter_explicit.py  test_inserter_single.py  test_jsonl_store.py  test_needles.py  test_no_legacy_entry_point.py  test_provider_anthropic_contract.py  test_provider_cohere_contract.py  test_provider_openai_contract.py  test_provider_registry.py  test_scorer_chain.py  test_scorer_exact.py  test_sweep.py  test_task_multi.py  test_task_registry.py  test_task_single.py  test_task_uuid.py  test_task_uuid_chain.py  test_tokens.py  test_types.py
